tests/ui/reborrow/coerce-shared-multi-field.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-multi-field.rs:37:13
   |
LL | impl<'a, T> CoerceShared<MatRef<'a, T>> for MatMut<'a, T> {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

